Turn on -XX:+AggressiveOpts