@@ -259,7 +259,7 @@
           <repositoryName>lib</repositoryName>
           <repositoryLayout>flat</repositoryLayout>
           <licenseHeaderFile>${project.basedir}/LICENSE-header</licenseHeaderFile>
-          <extraJvmArguments>-server -Xms1024M -Xmx1024M -XX:-TieredCompilation</extraJvmArguments>
+          <extraJvmArguments>-server -Xms1024M -Xmx1024M -XX:-TieredCompilation -XX:+AggressiveOpts</extraJvmArguments>
           <programs>
             <program>
               <name>golo</name>
